--- a/app/scss/components/_team.scss
+++ b/app/scss/components/_team.scss
@@ -2,6 +2,10 @@
    &__photo {
       margin-bottom: 15px;
       text-align: center;
+
+      img {
+         max-width: 100%;
+      }
    }
 
    &__info {
